login page can alert,fetch data per emp to edit(cannot edit now)

--- a/views/pages/addUser.ejs
+++ b/views/pages/addUser.ejs
@@ -53,14 +53,16 @@
             </div>
             <br><br><br>
             <hr>
-            <form action="/select" method="POST">
+            <!-- <form action="/select" method="POST">
                 <h1 class="dispaly-4">Check employee data</h1>
                 <input type="number" placeholder="empnum" name="num" >
                 <input type="text" placeholder="pass" name="pass">
                 <button class="btn btn-dark">Peek</button>
-            </form>
+                
+            </form> -->
+            <a href="/catalog" ><button class="btn btn-dark" formmethod="post">Catalog</button></a>
+            <a href="/login" ><button class="btn btn-dark" formmethod="post">Login</button></a>
             
-            <a href="/login" ><button class="btn btn-dark">Login</button></a>
 
     </div>
 </body>
