--- a/views/pages/editEmployee.ejs
+++ b/views/pages/editEmployee.ejs
@@ -232,26 +232,26 @@
                                                 class="col-lg-3 col-form-label form-control-label">EmployeeNumber</label>
                                             <div class="col-lg-9">
                                                 <input class="form-control" id="disabledTextInput" type="text"
-                                                    value="<%= res[0].employeeNumber%>" />
+                                                    value="" />
                                             </div>
                                         </div>
                                         <div class="form-group row">
                                             <label class="col-lg-3 col-form-label form-control-label">First name</label>
                                             <div class="col-lg-9">
                                                 <input class="form-control" type="text"
-                                                    value="<%= res[0].firstName%>" />
+                                                    value="" />
                                             </div>
                                         </div>
                                         <div class="form-group row">
                                             <label class="col-lg-3 col-form-label form-control-label">Last name</label>
                                             <div class="col-lg-9">
-                                                <input class="form-control" type="text" value="<%= res[0].lastName%>" />
+                                                <input class="form-control" type="text" value="" />
                                             </div>
                                         </div>
                                         <div class="form-group row">
                                             <label class="col-lg-3 col-form-label form-control-label">Email</label>
                                             <div class="col-lg-9">
-                                                <input class="form-control" type="email" value="<%= res[0].email%>" />
+                                                <input class="form-control" type="email" value="" />
                                             </div>
                                         </div>
                                     </fieldset>
@@ -259,28 +259,27 @@
                                         <label class="col-lg-3 col-form-label form-control-label">JobTitle</label>
                                         <div class="col-lg-9">
                                             <select class="form-control" name="" id="">
-                                                <option value="" class="option"><%= res[0].jobTitle%></option>
+                                                <option value="" class="option"></option>
                                             </select>
-                                            <!-- <input class="form-control" type="text" value="<%= res[0].jobTitle%>" /> -->
                                         </div>
                                     </div>
                                     <fieldset disabled="disabled">
                                         <div class="form-group row">
                                             <label class="col-lg-3 col-form-label form-control-label">OfficeCode</label>
                                             <div class="col-lg-9">
-                                                <input class="form-control" type="text" value="<%= res[0].officeCode%>"
+                                                <input class="form-control" type="text" value=""
                                                     placeholder="x" />
                                             </div>
                                         </div>
                                         <div class="form-group row">
                                             <label class="col-lg-3 col-form-label form-control-label">extention</label>
                                             <div class="col-lg-3">
-                                                <input class="form-control" type="text" value="<%= res[0].extension%>"
+                                                <input class="form-control" type="text" value=""
                                                     placeholder="extention" />
                                             </div>
                                             <label class="col-lg-2 col-form-label form-control-label">reportsTo</label>
                                             <div class="col-lg-3">
-                                                <input class="form-control" type="text" value="<%= res[0].reportsTo%>"
+                                                <input class="form-control" type="text" value=""
                                                     placeholder="reportsTo" />
                                             </div>
                                         </div>
@@ -288,13 +287,13 @@
                                     <div class="form-group row">
                                         <label class="col-lg-3 col-form-label form-control-label">Password</label>
                                         <div class="col-lg-9">
-                                            <input class="form-control" type="password" value="11111122333" />
+                                            <input class="form-control" type="password" value="" />
                                         </div>
                                     </div>
                                     <div class="form-group row">
                                         <label class="col-lg-3 col-form-label form-control-label"></label>
                                         <div class="col-lg-9">
-                                            <a href="/admin/employee/clearSESSION">
+                                            <a href="/admin/employee/">
                                                 <button type="button" class="btn btn-secondary">Cancel</button>
                                             </a>
                                             <input type="button" class="btn btn-primary" value="Save Changes" />
